server: public-facing README; move WHITELIST/OPS to .env; default to release
Make the derpack-server bundle suitable for a public repo:

- README rewritten as a generic, professional server-setup guide (no box-specific
  paths or internal incident history).
- WHITELIST and OPS are no longer hardcoded in docker-compose.yml (they shipped
  the maintainers' player names); they're now .env operator fields, driven by
  ${WHITELIST}/${OPS} and persisted across updates by auto-update.sh. A warning
  fires if WHITELIST is empty under enforcement.
- Default CHANNEL is now `release` (a public clone tracks stable releases);
  branch/playtest is an explicit opt-in.
- build-server-repo.sh is now idempotent: if derpack-server already exists it
  clones, overlays the bundle, and pushes only the diff — so re-running --push
  syncs updates instead of erroring.

https://claude.ai/code/session_01NNXA661XEUPz8i4jWREUHh